# chain-db

./: .gitignore  pyproject.toml
docs/: ChainDB_Detailed_Paper_CN.html  ChainDB_Detailed_Paper_CN.md  ChainDB_Paper_CN.md  chaindb_paper.html  chaindb_paper.md  class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
native/: README.md
native/chainsql_core/: Cargo.toml
native/chainsql_core/src/: lib.rs
scripts/: generate_paper_html.py  start_node.py
src/chain_db/: __init__.py  config.py  main.py  relation_index.py
src/chain_db/api/: __init__.py  handlers.py  rpc.py
src/chain_db/consensus/: __init__.py  pop.py  proposal.py  vote.py
src/chain_db/dashboard/: __init__.py  routes.py
src/chain_db/dashboard/static/: index.html
src/chain_db/models/: __init__.py  block.py  ledger.py  persistent_ledger.py  transaction.py
src/chain_db/native/: __init__.py
src/chain_db/network/: __init__.py  p2p.py  protocol.py  router.py
src/chain_db/sql/: __init__.py  converter.py  parser.py  validator.py
src/chain_db/storage/: __init__.py  database.py  query.py  table_registry.py
src/chain_db/sync/: __init__.py  incremental.py  state_manager.py  table_sync.py
tests/: test_block.py  test_consensus.py  test_e2e.py  test_incremental.py  test_perf.py  test_rpc.py  test_sql_parser.py  test_table_sync.py  test_transaction.py
